[package]
name = "clove1db"
version = "0.0.7"
edition = "2024"
license = "MIT"
authors = ["Hlever"]
description="A lightweight embedded database framework for Rust — built on redb with layered cache, versioned backup, and domain-driven storage."
repository = "https://github.com/1he03/clove1db"
keywords = ["database", "embedded", "storage", "cache", "backup"]
categories = ["database", "caching", "data-structures"]
readme = "README.md"


[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
chrono = "0.4.44"
dirs = "6.0.0"
include_dir = "0.7.4"
itertools = "0.14.0"
moka = { version = "0.12.14", features = ["future"] }
rayon = "1.11.0"
redb = "3.1.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full", "rt-multi-thread"] }
walkdir = "2.5.0"