[package]
name = "clove1db"
version = "0.0.42"
edition = "2024"
license = "MIT"
authors = ["Hlever"]
description = "A lightweight embedded database framework for Rust — built on redb with layered cache, versioned backup, and domain-driven storage."
repository = "https://github.com/clove7/clove1db"
keywords = ["database", "embedded", "storage", "cache", "backup"]
categories = ["database", "caching", "data-structures"]
readme = "README.md"


[dependencies]
chrono = "0.4.44"
itertools = "0.14.0"
moka = { version = "0.12.15", features = ["sync"] }
redb = "4.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
uuid = { version = "1.23.1", features = ["v4"] }
